--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <!-- BUTTON FOOTER -->
     <footer>
-        <button id="toggleButton">Toggle Sections</button>
+        <button id="toggleButton">Show/Hide Sections</button>
     </footer>
 
     <!-- TS SCRIPT -->
